# IntScrape

./: .gitignore  Cargo.toml  Dockerfile  build.rs
.cargo/: config.toml
libs/ipc_macro/: Cargo.toml
libs/ipc_macro/src/: lib.rs
libs/shared_types/: Cargo.toml
libs/shared_types/src/: lib.rs
plugins/agnph/: Cargo.toml
plugins/agnph/src/: lib.rs
plugins/chan/: Cargo.toml
plugins/chan/src/: lib.rs
plugins/divascans/: Cargo.toml
plugins/divascans/src/: lib.rs
plugins/e6/: Cargo.toml
plugins/e6/src/: lib.rs
plugins/file-hash/: Cargo.toml
plugins/file-hash/src/: lib.rs
plugins/file-thumbnail/: Cargo.toml
plugins/file-thumbnail/src/: lib.rs
plugins/file-thumbnail/thumbnailer/: Cargo.toml
plugins/file-thumbnail/thumbnailer/src/: lib.rs
plugins/file-thumbnail/thumbnailer/src/formats/: video_format.rs
plugins/file-thumbnail/thumbnailer/tests/: image_reading.rs  image_writing.rs  video_reading.rs
plugins/novellight/: Cargo.toml
plugins/novellight/src/: lib.rs
plugins/rule34/: Cargo.toml
plugins/rule34/src/: lib.rs
plugins/sleepy-dev/: Cargo.toml
plugins/sleepy-dev/src/: lib.rs
src/: cli.rs  helper_functions.rs  ipc.rs  main.rs  plugins.rs
src/cli/: cli_structs.rs
src/db/: main.rs  mod.rs  roaring.rs
src/web/: downloading.rs  manager.rs  mod.rs
