[package]
name = "intscrape"
version = "0.1.0"
edition = "2024"

[dependencies]
fast_log = "1.7.8"
log = "0.4.33"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "*", default-features=false, features = [] }
reqwest = {version = "0.12.22", default-features=false,features=["cookies", "gzip", "deflate", "default", "native-tls"]}
serde_rusqlite = "*"
tokio = { version = "1.52.3", default-features=false, features = ["rt-multi-thread", "fs"] }
shared_types = {path = "./libs/shared_types"}
libloading = "0.9.0"
parking_lot = "0.12.5"
serde_json = "1.0.150"
url = "2.5.8"
clap = { version = "4.6.1", features = ["derive"] }
governor = "0.10.4"
bytes = "1.12.0"
file-format = {version="0.29.0", features=["reader"]}
sha2 = "0.11.0"
sha1 = "0.11.0"
md5 = "0.8.0"
hex = "0.4.3"
rayon = "1.12.0"
rusqlite = { version = "*",default-features=false, features = ["trace"] }
serde = { version = "1.0.228", features = ["derive"] }
interprocess = { version = "2.4.2", features = ["tokio"] }
bitcode = { version = "0.6.9", features = ["serde"] }
client = { path = "./generated/client" }
roaring = "0.11.4"
intmap = "3.1.3"
rand = "0.10.1"
cfg-if = "1.0.4"
libc = "0.2.186"
dhat = "0.3.3"
tempfile = "3.27.0"
walkdir = "2.5.0"

[workspace.dependencies]
shared_types = { path = "./libs/shared_types" }
client = { path = "./generated/client" }
file-format = {version="0.29.0", features=["reader"]}
serde={version="1.0.228", features=["derive"]}
interprocess = { version = "2.4.2"}
bitcode = "0.6.9"
tokio = { version = "1.52.3", default-features=false, features = ["rt-multi-thread", "fs"] }

[workspace]
members = [
    "plugins/*",
    "libs/shared_types"
, "generated/client"]

[profile.release]
opt-level = "z"     
lto = true          
codegen-units = 1   
panic = "abort"     
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling
