[package]
name = "shared_types"
version = "0.1.0"
edition = "2024"

[dependencies]
redact = { git = "https://github.com/git4unrealnondev/redact", features = ["serde", "bitcode"] }
serde = { workspace = true }
bitcode = { workspace = true }

[features]
default = ["exe_build"]
exe_build = ["regex", "clap", "serde"]
# Enables sending and recieving regex
regex = []
clap = []
serde = []
