[package]
name = "file-hash"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] 

[dependencies]
hex = "0.4.3"
image = "0.25.10"
image_hasher = "3.1.1"
ipfs-cid = {git="https://github.com/git4unrealnondev/ipfs-cid"}
md-5 = "0.11.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
shared_types = { workspace = true }
client = { workspace = true }
threadpool = "1.8.1"
