[package]
name = "novellight"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] 

[dependencies]
chrono = "0.4.45"
json = "0.12.4"
regex = "1.12.4"
scraper = "0.27.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.150"
shared_types = { workspace = true }
url = "2.5.8"
